--- a/public/index.html
+++ b/public/index.html
@@ -15,7 +15,7 @@
       integrity="sha384-4bw+/aepP/YC94hEpVNVgiZdgIC5+VKNBQNGCHeKRQN+PtmoHDEXuppvnDJzQIu9"
       crossorigin="anonymous"
     />
-  </head>
+    <link rel="icon" type="image/svg+xml" href="./images/NoteBookIcon.png" />  </head>
   <body>
     <div id="root"></div>
     <script src="https://kit.fontawesome.com/4164737b0f.js" crossorigin="anonymous"></script>
